syntax = "proto3";

package msg.v1;

import "google/protobuf/any.proto";

option go_package = "msg/v1;msgv1";

message Message {
  enum Type {
    TYPE_INVALID_UNSPECIFIED = 0;
    TYPE_CHANNEL_MESSAGE = 1; // 聊天消息
    // 添加其他消息类型
  }
  Type type = 1; // 消息类型
  int64 push_id = 2; // 下推消息时,需要填写此Id以便让网关找到link
  google.protobuf.Any body = 3; // 业务相关的具体消息体
}

message ChannelMessage {
  enum ContentType {
    CONTENT_TYPE_INVALID_UNSPECIFIED = 0;
    CONTENT_TYPE_TEXT = 1;
    CONTENT_TYPE_IMAGE = 2;
    CONTENT_TYPE_VIDEO = 3;
  }

  int64 id = 1;
  int64 send_id = 2;
  int64 cid = 3;
  int64 send_time = 4;
  ContentType content_type = 5;
  string content = 6;
  // mentions []int64 艾特某些人
  // mentioned bool 是否被艾特
}

message SendRequest {
  Message msg = 1;
}

message SendResponse {}

service MessageService {
  rpc Send(SendRequest) returns (SendResponse);
}
